k8s/middleware-services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"mysql","namespace":"middleware"},"spec":{"clusterIP":"None","ports":[{"port":3306}],"selector":{"app":"mysql"}}}
    creationTimestamp: "2026-05-16T17:44:55Z"
    name: mysql
    namespace: middleware
    resourceVersion: "101299"
    uid: fcb50796-e9e6-415c-9e26-40ba17db09be
  spec:
    clusterIP: None
    clusterIPs:
    - None
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
    selector:
      app: mysql
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"redis-cluster","namespace":"middleware"},"spec":{"clusterIP":"None","ports":[{"name":"client","port":6379},{"name":"gossip","port":16379}],"selector":{"app":"redis"}}}
    creationTimestamp: "2026-05-16T17:43:50Z"
    name: redis-cluster
    namespace: middleware
    resourceVersion: "201745"
    uid: fbe46b81-8bfc-420d-b8f9-00917d468cdd
  spec:
    clusterIP: None
    clusterIPs:
    - None
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: client
      port: 6379
      protocol: TCP
      targetPort: 6379
    - name: gossip
      port: 16379
      protocol: TCP
      targetPort: 16379
    selector:
      app: redis
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
