k8s/netpol-test-deployments.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    creationTimestamp: "2026-05-12T17:02:12Z"
    generation: 1
    labels:
      app: api
    name: api
    namespace: netpol-test
    resourceVersion: "238184"
    uid: df21053d-34c3-467c-af5e-185da72af057
  spec:
    progressDeadlineSeconds: 600
    replicas: 2
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: api
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: api
      spec:
        containers:
        - command:
          - sleep
          - "3600"
          image: busybox
          imagePullPolicy: Always
          name: busybox
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 2
    conditions:
    - lastTransitionTime: "2026-05-12T17:02:12Z"
      lastUpdateTime: "2026-05-12T17:02:25Z"
      message: ReplicaSet "api-7c45bfb98" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2026-05-18T13:43:57Z"
      lastUpdateTime: "2026-05-18T13:43:57Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 1
    readyReplicas: 2
    replicas: 2
    terminatingReplicas: 0
    updatedReplicas: 2
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    creationTimestamp: "2026-05-12T17:02:13Z"
    generation: 1
    labels:
      app: db
    name: db
    namespace: netpol-test
    resourceVersion: "238186"
    uid: 4506a458-cad2-4fab-824e-f868bde093f3
  spec:
    progressDeadlineSeconds: 600
    replicas: 2
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: db
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: db
      spec:
        containers:
        - command:
          - sleep
          - "3600"
          image: busybox
          imagePullPolicy: Always
          name: busybox
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 2
    conditions:
    - lastTransitionTime: "2026-05-12T17:02:13Z"
      lastUpdateTime: "2026-05-12T17:02:25Z"
      message: ReplicaSet "db-7bbdcf6db4" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2026-05-18T13:43:57Z"
      lastUpdateTime: "2026-05-18T13:43:57Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 1
    readyReplicas: 2
    replicas: 2
    terminatingReplicas: 0
    updatedReplicas: 2
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    creationTimestamp: "2026-05-12T17:02:10Z"
    generation: 1
    labels:
      app: web
    name: web
    namespace: netpol-test
    resourceVersion: "238193"
    uid: 9a02753e-3c44-46b2-abf5-0d9618a8a13a
  spec:
    progressDeadlineSeconds: 600
    replicas: 2
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: web
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: web
      spec:
        containers:
        - command:
          - sleep
          - "3600"
          image: busybox
          imagePullPolicy: Always
          name: busybox
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 2
    conditions:
    - lastTransitionTime: "2026-05-12T17:02:10Z"
      lastUpdateTime: "2026-05-12T17:02:25Z"
      message: ReplicaSet "web-67b4f888fb" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2026-05-18T13:43:58Z"
      lastUpdateTime: "2026-05-18T13:43:58Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 1
    readyReplicas: 2
    replicas: 2
    terminatingReplicas: 0
    updatedReplicas: 2
kind: List
metadata:
  resourceVersion: ""
