k8s/netpol-test-services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"api-svc","namespace":"netpol-test"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":80}],"selector":{"app":"api"},"type":"ClusterIP"}}
    creationTimestamp: "2026-05-15T10:23:48Z"
    name: api-svc
    namespace: netpol-test
    resourceVersion: "25388"
    uid: 74f2e56f-99b1-4442-a740-384ba17282a1
  spec:
    clusterIP: 10.43.32.27
    clusterIPs:
    - 10.43.32.27
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: api
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
