k8s/sdn-statefulsets.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: StatefulSet
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"StatefulSet","metadata":{"annotations":{},"name":"ryu","namespace":"sdn"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"ryu"}},"serviceName":"ryu-svc","template":{"metadata":{"labels":{"app":"ryu"}},"spec":{"containers":[{"command":["ryu-manager","--ofp-listen-host","0.0.0.0","ryu.app.simple_switch_13"],"image":"ryu-img:latest","imagePullPolicy":"IfNotPresent","name":"ryu","ports":[{"containerPort":6633,"name":"openflow"}]}]}}}}
    creationTimestamp: "2026-05-15T16:07:49Z"
    generation: 1
    name: ryu
    namespace: sdn
    resourceVersion: "186716"
    uid: 42934edb-4b19-4853-ba49-821dffb01b3c
  spec:
    persistentVolumeClaimRetentionPolicy:
      whenDeleted: Retain
      whenScaled: Retain
    podManagementPolicy: OrderedReady
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: ryu
    serviceName: ryu-svc
    template:
      metadata:
        labels:
          app: ryu
      spec:
        containers:
        - command:
          - ryu-manager
          - --ofp-listen-host
          - 0.0.0.0
          - ryu.app.simple_switch_13
          image: ryu-img:latest
          imagePullPolicy: IfNotPresent
          name: ryu
          ports:
          - containerPort: 6633
            name: openflow
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    updateStrategy:
      rollingUpdate:
        partition: 0
      type: RollingUpdate
  status:
    availableReplicas: 1
    collisionCount: 0
    currentReplicas: 1
    currentRevision: ryu-74f4bd988d
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updateRevision: ryu-74f4bd988d
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
